Fixed alignment issue of user menu, updated to green variant.

--- a/components/Header/UserMenu/styles.module.scss
+++ b/components/Header/UserMenu/styles.module.scss
@@ -4,6 +4,8 @@
     font-size: 1.2rem;
     transition: color .2s ease-in-out;
     margin-right: 20px;
+    display: flex;
+    align-items: center;
     &.active,
     &:hover {
         color: $green;
